# nano-memory-agent

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml
nano_memory/: __init__.py  cli.py
nano_memory/config/: __init__.py  schema.py
nano_memory/core/: memory.py
nano_memory/cost/: __init__.py  tracker.py
nano_memory/embedders/: __init__.py  base.py  factory.py  local.py  openai.py
nano_memory/store/: __init__.py  atomic_writer.py  schema.py  sqlite_store.py
